fix screen switching for more than two screens

BUG: 264041
FIXED-IN: 4.10